[package]
name = "CryptoCalc"
authors = ["twertybog"]
version = "0.1.1"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.15"
rand = "0.8.5"

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
opt-level = "z"
lto = true